--- a/static/home.css
+++ b/static/home.css
@@ -43,6 +43,40 @@
     animation: fade 1.2s;
     transition: 2s;
 }
+.trans-frame{
+    height: 100vh;
+    width: 100vw;
+    background-image: url('../pics/trans-top.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    z-index: 2;
+}
+.wrapper{
+    overflow: hidden;
+}
+.stars-wrap{
+    height: 2500px;
+    width: 2502px;
+    background-image: url('../pics/sr1_w_trans.png');
+    background-repeat: repeat;
+    background-size: 250px;
+    background-position: center;
+    position: relative;
+    bottom: 158vh;
+    right: 520px;
+    animation: stars 300s infinite linear;
+    z-index: 1;
+}
+@keyframes stars {
+    from{
+        transform: rotate(360deg);
+    }
+    to{
+        transform: rotate(0deg);
+    }
+}
 @media (max-width: 1150px) {
     .profile-pic{
         border: 1px solid rgb(116, 15, 70);
