--- a/static/home.css
+++ b/static/home.css
@@ -72,10 +72,14 @@
 }
 
 @keyframes stars {
-    from{
+    0%{
         transform: rotate(360deg);
+        opacity: 0%;
     }
-    to{
+    1%{
+        opacity: 100%;
+    }
+    100%{
         transform: rotate(0deg);
     }
 }
