--- a/static/about.css
+++ b/static/about.css
@@ -22,6 +22,7 @@
     border-radius: 20px 20px;
     box-shadow: 0px 0px 10px gray;
     text-shadow: 0px 2px rgb(5, 5, 83);
+    box-sizing: border-box;
 }
 .anime-left{
     animation: fade-left 1.5s;
@@ -34,6 +35,12 @@
     .about-text{
         padding: 10px;
         font-size: 18px;
+    }
+}
+@media (max-width:531px) {
+    .about-text{
+        max-height: 50vh;
+        overflow-y: auto;
     }
 }
 @keyframes fade-left {
